RESOLVED FIXED196277
[macOS] The network process is not exiting reliably when the WebProcessPool is destroyed
https://bugs.webkit.org/show_bug.cgi?id=196277
Summary [macOS] The network process is not exiting reliably when the WebProcessPool i...
Chris Dumez
Reported 2019-03-26 16:05:01 PDT
The network process is not exiting reliably when the WebProcessPool is destroyed.
Attachments
Patch (4.41 KB, patch)
2019-03-26 16:13 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-03-26 16:05:18 PDT
Chris Dumez
Comment 2 2019-03-26 16:13:34 PDT
WebKit Commit Bot
Comment 3 2019-03-26 16:54:16 PDT
Comment on attachment 366017 [details] Patch Clearing flags on attachment: 366017 Committed r243528: <https://trac.webkit.org/changeset/243528>
WebKit Commit Bot
Comment 4 2019-03-26 16:54:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.